--- a/examples/accesscontextmanager/serviceperimeter.yaml
+++ b/examples/accesscontextmanager/serviceperimeter.yaml
@@ -10,9 +10,7 @@ metadata:
 spec:
   forProvider:
     name: accessPolicies/${google_access_context_manager_access_policy.access-policy.name}/servicePerimeters/restrict_storage
-    parentSelector:
-      matchLabels:
-        testing.upbound.io/example-name: access-policy
+    parent: accessPolicies/${google_access_context_manager_access_policy.access-policy.name}
     status:
     - restrictedServices:
       - storage.googleapis.com
@@ -63,3 +61,6 @@ spec:
   forProvider:
     parent: organizations/123456789
     title: my policy
+
+---
+
