--- a/examples-generated/alloydb/backup.yaml
+++ b/examples-generated/alloydb/backup.yaml
@@ -26,7 +26,9 @@ metadata:
 spec:
   forProvider:
     location: us-central1
-    network: ${data.google_compute_network.default.id}
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: google_compute_network
 
 ---
 
