--- a/package/crds/alloydb.gcp.upbound.io_clusters.yaml
+++ b/package/crds/alloydb.gcp.upbound.io_clusters.yaml
@@ -68,11 +68,8 @@ spec:
               forProvider:
                 properties:
                   automatedBackupPolicy:
-                    description: The automated backup policy for this cluster. If
-                      no policy is provided then the default policy will be used.
-                      The default policy takes one backup a day, has a backup window
-                      of 1 hour, and retains backups for 14 days. Structure is documented
-                      below.
+                    description: The automated backup policy for this cluster. AutomatedBackupPolicy
+                      is disabled by default. Structure is documented below.
                     items:
                       properties:
                         backupWindow:
@@ -180,6 +177,39 @@ spec:
                           type: array
                       type: object
                     type: array
+                  continuousBackupConfig:
+                    description: The continuous backup config for this cluster. If
+                      no policy is provided then the default policy will be used.
+                      The default policy takes one backup a day and retains backups
+                      for 14 days. Structure is documented below.
+                    items:
+                      properties:
+                        enabled:
+                          description: Whether continuous backup recovery is enabled.
+                            If not set, defaults to true.
+                          type: boolean
+                        encryptionConfig:
+                          description: EncryptionConfig describes the encryption config
+                            of a cluster or a backup that is encrypted with a CMEK
+                            (customer-managed encryption key). Structure is documented
+                            below.
+                          items:
+                            properties:
+                              kmsKeyName:
+                                description: 'The fully-qualified resource name of
+                                  the KMS key. Each Cloud KMS key is regionalized
+                                  and has the following format: projects/[PROJECT]/locations/[REGION]/keyRings/[RING]/cryptoKeys/[KEY_NAME].'
+                                type: string
+                            type: object
+                          type: array
+                        recoveryWindowDays:
+                          description: The numbers of days that are eligible to restore
+                            from using PITR. To support the entire recovery window,
+                            backups and logs are retained for one day more than the
+                            recovery window. If not set, defaults to 14 days.
+                          type: number
+                      type: object
+                    type: array
                   displayName:
                     description: User-settable and human-readable display name for
                       the Cluster.
@@ -241,6 +271,79 @@ spec:
                       which the instance can be accessed. It is specified in the following
                       form: "projects/{projectNumber}/global/networks/{network_id}".'
                     type: string
+                  networkRef:
+                    description: Reference to a Network in compute to populate network.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                      policy:
+                        description: Policies for referencing.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: Resolution specifies whether resolution of
+                              this reference is required. The default is 'Required',
+                              which means the reconcile will fail if the reference
+                              cannot be resolved. 'Optional' means this reference
+                              will be a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: Resolve specifies when this reference should
+                              be resolved. The default is 'IfNotPresent', which will
+                              attempt to resolve the reference only when the corresponding
+                              field is not present. Use 'Always' to resolve the reference
+                              on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    required:
+                    - name
+                    type: object
+                  networkSelector:
+                    description: Selector for a Network in compute to populate network.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: Resolution specifies whether resolution of
+                              this reference is required. The default is 'Required',
+                              which means the reconcile will fail if the reference
+                              cannot be resolved. 'Optional' means this reference
+                              will be a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: Resolve specifies when this reference should
+                              be resolved. The default is 'IfNotPresent', which will
+                              attempt to resolve the reference only when the corresponding
+                              field is not present. Use 'Always' to resolve the reference
+                              on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
                   project:
                     description: The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
@@ -262,11 +365,8 @@ spec:
                   them, like an autoscaler.
                 properties:
                   automatedBackupPolicy:
-                    description: The automated backup policy for this cluster. If
-                      no policy is provided then the default policy will be used.
-                      The default policy takes one backup a day, has a backup window
-                      of 1 hour, and retains backups for 14 days. Structure is documented
-                      below.
+                    description: The automated backup policy for this cluster. AutomatedBackupPolicy
+                      is disabled by default. Structure is documented below.
                     items:
                       properties:
                         backupWindow:
@@ -369,6 +469,39 @@ spec:
                           type: array
                       type: object
                     type: array
+                  continuousBackupConfig:
+                    description: The continuous backup config for this cluster. If
+                      no policy is provided then the default policy will be used.
+                      The default policy takes one backup a day and retains backups
+                      for 14 days. Structure is documented below.
+                    items:
+                      properties:
+                        enabled:
+                          description: Whether continuous backup recovery is enabled.
+                            If not set, defaults to true.
+                          type: boolean
+                        encryptionConfig:
+                          description: EncryptionConfig describes the encryption config
+                            of a cluster or a backup that is encrypted with a CMEK
+                            (customer-managed encryption key). Structure is documented
+                            below.
+                          items:
+                            properties:
+                              kmsKeyName:
+                                description: 'The fully-qualified resource name of
+                                  the KMS key. Each Cloud KMS key is regionalized
+                                  and has the following format: projects/[PROJECT]/locations/[REGION]/keyRings/[RING]/cryptoKeys/[KEY_NAME].'
+                                type: string
+                            type: object
+                          type: array
+                        recoveryWindowDays:
+                          description: The numbers of days that are eligible to restore
+                            from using PITR. To support the entire recovery window,
+                            backups and logs are retained for one day more than the
+                            recovery window. If not set, defaults to 14 days.
+                          type: number
+                      type: object
+                    type: array
                   displayName:
                     description: User-settable and human-readable display name for
                       the Cluster.
@@ -401,11 +534,6 @@ spec:
                       type: string
                     description: User-defined labels for the alloydb cluster.
                     type: object
-                  network:
-                    description: 'The relative resource name of the VPC network on
-                      which the instance can be accessed. It is specified in the following
-                      form: "projects/{projectNumber}/global/networks/{network_id}".'
-                    type: string
                   project:
                     description: The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
@@ -608,22 +736,14 @@ spec:
             required:
             - forProvider
             type: object
-            x-kubernetes-validations:
-            - message: network is a required parameter
-              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
-                || ''Update'' in self.managementPolicies) || has(self.forProvider.network)
-                || has(self.initProvider.network)'
           status:
             description: ClusterStatus defines the observed state of Cluster.
             properties:
               atProvider:
                 properties:
                   automatedBackupPolicy:
-                    description: The automated backup policy for this cluster. If
-                      no policy is provided then the default policy will be used.
-                      The default policy takes one backup a day, has a backup window
-                      of 1 hour, and retains backups for 14 days. Structure is documented
-                      below.
+                    description: The automated backup policy for this cluster. AutomatedBackupPolicy
+                      is disabled by default. Structure is documented below.
                     items:
                       properties:
                         backupWindow:
@@ -739,6 +859,79 @@ spec:
                         backupName:
                           description: The name of the backup resource.
                           type: string
+                      type: object
+                    type: array
+                  continuousBackupConfig:
+                    description: The continuous backup config for this cluster. If
+                      no policy is provided then the default policy will be used.
+                      The default policy takes one backup a day and retains backups
+                      for 14 days. Structure is documented below.
+                    items:
+                      properties:
+                        enabled:
+                          description: Whether continuous backup recovery is enabled.
+                            If not set, defaults to true.
+                          type: boolean
+                        encryptionConfig:
+                          description: EncryptionConfig describes the encryption config
+                            of a cluster or a backup that is encrypted with a CMEK
+                            (customer-managed encryption key). Structure is documented
+                            below.
+                          items:
+                            properties:
+                              kmsKeyName:
+                                description: 'The fully-qualified resource name of
+                                  the KMS key. Each Cloud KMS key is regionalized
+                                  and has the following format: projects/[PROJECT]/locations/[REGION]/keyRings/[RING]/cryptoKeys/[KEY_NAME].'
+                                type: string
+                            type: object
+                          type: array
+                        recoveryWindowDays:
+                          description: The numbers of days that are eligible to restore
+                            from using PITR. To support the entire recovery window,
+                            backups and logs are retained for one day more than the
+                            recovery window. If not set, defaults to 14 days.
+                          type: number
+                      type: object
+                    type: array
+                  continuousBackupInfo:
+                    description: ContinuousBackupInfo describes the continuous backup
+                      properties of a cluster. Structure is documented below.
+                    items:
+                      properties:
+                        earliestRestorableTime:
+                          description: (Output) The earliest restorable time that
+                            can be restored to. Output only field.
+                          type: string
+                        enabledTime:
+                          description: (Output) When ContinuousBackup was most recently
+                            enabled. Set to null if ContinuousBackup is not enabled.
+                          type: string
+                        encryptionInfo:
+                          description: (Output) Output only. The encryption information
+                            for the WALs and backups required for ContinuousBackup.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              encryptionType:
+                                description: (Output) Output only. Type of encryption.
+                                type: string
+                              kmsKeyVersions:
+                                description: (Output) Output only. Cloud KMS key versions
+                                  that are being used to protect the database or the
+                                  backup.
+                                items:
+                                  type: string
+                                type: array
+                            type: object
+                          type: array
+                        schedule:
+                          description: (Output) Days of the week on which a continuous
+                            backup is taken. Output only field. Ignored if passed
+                            into the request.
+                          items:
+                            type: string
+                          type: array
                       type: object
                     type: array
                   databaseVersion:
