--- a/package/crds/alloydb.gcp.upbound.io_instances.yaml
+++ b/package/crds/alloydb.gcp.upbound.io_instances.yaml
@@ -74,10 +74,16 @@ spec:
                       amount of arbitrary data. This is distinct from labels.
                     type: object
                   availabilityType:
-                    description: 'Availability type of an Instance. Defaults to REGIONAL
-                      for both primary and read instances. Note that primary and read
-                      instances can have different availability types. Possible values
-                      are: AVAILABILITY_TYPE_UNSPECIFIED, ZONAL, REGIONAL.'
+                    description: '''Availability type of an Instance. Defaults to
+                      REGIONAL for both primary and read instances. Note that primary
+                      and read instances can have different availability types. Only
+                      READ_POOL instance supports ZONAL type. Users can''t specify
+                      the zone for READ_POOL instance. Zone is automatically chosen
+                      from the list of zones in the region specified. Read pool of
+                      size 1 can only have zonal availability. Read pools with node
+                      count of 2 or more can have regional availability (nodes are
+                      present in 2 or more zones in a region).'' Possible values are:
+                      AVAILABILITY_TYPE_UNSPECIFIED, ZONAL, REGIONAL.'
                     type: string
                   cluster:
                     description: Identifies the alloydb cluster. Must be in the format
@@ -232,10 +238,16 @@ spec:
                       amount of arbitrary data. This is distinct from labels.
                     type: object
                   availabilityType:
-                    description: 'Availability type of an Instance. Defaults to REGIONAL
-                      for both primary and read instances. Note that primary and read
-                      instances can have different availability types. Possible values
-                      are: AVAILABILITY_TYPE_UNSPECIFIED, ZONAL, REGIONAL.'
+                    description: '''Availability type of an Instance. Defaults to
+                      REGIONAL for both primary and read instances. Note that primary
+                      and read instances can have different availability types. Only
+                      READ_POOL instance supports ZONAL type. Users can''t specify
+                      the zone for READ_POOL instance. Zone is automatically chosen
+                      from the list of zones in the region specified. Read pool of
+                      size 1 can only have zonal availability. Read pools with node
+                      count of 2 or more can have regional availability (nodes are
+                      present in 2 or more zones in a region).'' Possible values are:
+                      AVAILABILITY_TYPE_UNSPECIFIED, ZONAL, REGIONAL.'
                     type: string
                   databaseFlags:
                     additionalProperties:
@@ -511,10 +523,16 @@ spec:
                       amount of arbitrary data. This is distinct from labels.
                     type: object
                   availabilityType:
-                    description: 'Availability type of an Instance. Defaults to REGIONAL
-                      for both primary and read instances. Note that primary and read
-                      instances can have different availability types. Possible values
-                      are: AVAILABILITY_TYPE_UNSPECIFIED, ZONAL, REGIONAL.'
+                    description: '''Availability type of an Instance. Defaults to
+                      REGIONAL for both primary and read instances. Note that primary
+                      and read instances can have different availability types. Only
+                      READ_POOL instance supports ZONAL type. Users can''t specify
+                      the zone for READ_POOL instance. Zone is automatically chosen
+                      from the list of zones in the region specified. Read pool of
+                      size 1 can only have zonal availability. Read pools with node
+                      count of 2 or more can have regional availability (nodes are
+                      present in 2 or more zones in a region).'' Possible values are:
+                      AVAILABILITY_TYPE_UNSPECIFIED, ZONAL, REGIONAL.'
                     type: string
                   cluster:
                     description: Identifies the alloydb cluster. Must be in the format
