--- a/examples/alloydb/cluster.yaml
+++ b/examples/alloydb/cluster.yaml
@@ -4,12 +4,14 @@ metadata:
   annotations:
     meta.upbound.io/example-id: alloydb/v1beta1/cluster
   labels:
-    testing.upbound.io/example-name: default
-  name: default
+    testing.upbound.io/example-name: alloydb-test
+  name: alloydb-test
 spec:
   forProvider:
     location: us-central1
-    network: projects/${data.google_project.project.number}/global/networks/${google_compute_network.default.name}
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: alloydb-test
 
 ---
 
@@ -19,7 +21,7 @@ metadata:
   annotations:
     meta.upbound.io/example-id: alloydb/v1beta1/cluster
   labels:
-    testing.upbound.io/example-name: default
-  name: default
+    testing.upbound.io/example-name: alloydb-test
+  name: alloydb-test
 spec:
   forProvider: {}
