--- a/package/crds/compute.gcp.upbound.io_regionnetworkendpointgroups.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionnetworkendpointgroups.yaml
@@ -210,7 +210,8 @@ spec:
                             comply with RFC1035. Example value: "run-service".'
                           type: string
                         serviceRef:
-                          description: Reference to a  to populate service.
+                          description: Reference to a Service in cloudrun to populate
+                            service.
                           properties:
                             name:
                               description: Name of the referenced object.
@@ -245,7 +246,8 @@ spec:
                           - name
                           type: object
                         serviceSelector:
-                          description: Selector for a  to populate service.
+                          description: Selector for a Service in cloudrun to populate
+                            service.
                           properties:
                             matchControllerRef:
                               description: MatchControllerRef ensures an object with
