--- a/examples/vpcaccess/connector.yaml
+++ b/examples/vpcaccess/connector.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   forProvider:
     ipCidrRange: 10.8.0.0/28
+    region: us-central1
     networkSelector:
       matchLabels:
         testing.upbound.io/example-name: example
