--- a/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
@@ -868,8 +868,7 @@ spec:
                                   where {project} can be project id or number.'
                                 type: string
                               connectorRef:
-                                description: Reference to a Connector in vpcaccess
-                                  to populate connector.
+                                description: Reference to a  to populate connector.
                                 properties:
                                   name:
                                     description: Name of the referenced object.
@@ -905,8 +904,7 @@ spec:
                                 - name
                                 type: object
                               connectorSelector:
-                                description: Selector for a Connector in vpcaccess
-                                  to populate connector.
+                                description: Selector for a  to populate connector.
                                 properties:
                                   matchControllerRef:
                                     description: MatchControllerRef ensures an object
