--- a/examples/vpcaccess/connector.yaml
+++ b/examples/vpcaccess/connector.yaml
@@ -1,3 +1,16 @@
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  annotations:
+    uptest.upbound.io/timeout: "4800"
+    meta.upbound.io/example-id: vpcaccess/v1beta1/connector
+  labels:
+    testing.upbound.io/example-name: vpcaccess_network
+  name: vpcaccess-network
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+---
 apiVersion: vpcaccess.gcp.upbound.io/v1beta1
 kind: Connector
 metadata:
@@ -12,4 +25,4 @@ spec:
     region: us-central1
     networkSelector:
       matchLabels:
-        testing.upbound.io/example-name: example
+        testing.upbound.io/example-name: vpcaccess_network
