--- a/examples/redis/instance.yaml
+++ b/examples/redis/instance.yaml
@@ -14,3 +14,6 @@ spec:
     labels:
       environment: dev
     authEnabled: true
+  writeConnectionSecretToRef:
+    name: example-redis-instance-secret
+    namespace: upbound-system
