--- a/examples/logging/folderexclusion.yaml
+++ b/examples/logging/folderexclusion.yaml
@@ -3,6 +3,7 @@ kind: FolderExclusion
 metadata:
   annotations:
     meta.upbound.io/example-id: logging/v1beta1/folderexclusion
+    upjet.upbound.io/manual-intervention: "FolderExclusion requires a folder id"
   labels:
     testing.upbound.io/example-name: my-exclusion
   name: my-exclusion
