--- a/examples/logging/foldersink.yaml
+++ b/examples/logging/foldersink.yaml
@@ -3,7 +3,7 @@ kind: FolderSink
 metadata:
   annotations:
     meta.upbound.io/example-id: logging/v1beta1/foldersink
-    upjet.upbound.io/manual-intervention: "FolderSink requires a folder id"
+    upjet.upbound.io/manual-intervention: "This resource depends on Folder.cloudplatform with the required organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: my-sink
   name: my-sink
@@ -29,9 +29,7 @@ metadata:
 spec:
   forProvider:
     displayName: My folder
-    parentSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    parent: organizations/{org_id}
 
 ---
 apiVersion: storage.gcp.upbound.io/v1beta1
@@ -40,7 +38,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: logging/v1beta1/foldersink
   labels:
-    testing.upbound.io/example-name: log-bucket
+    meta.upbound.io/example-id: logging/v1beta1/foldersink
+    upjet.upbound.io/manual-intervention: "This resource is the dependency of FolderSink.logging. This resource is skipping because parent resource was skipped."
   name: log-bucket-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
