--- a/examples/iam/workloadidentitypool.yaml
+++ b/examples/iam/workloadidentitypool.yaml
@@ -3,7 +3,7 @@ kind: WorkloadIdentityPool
 metadata:
   annotations:
     meta.upbound.io/example-id: iam/v1beta1/workloadidentitypool
-    upjet.upbound.io/manual-ntervention: "Needs permissions for Pool creation"
+    upjet.upbound.io/manual-intervention: "Needs permissions for Pool creation"
   labels:
     testing.upbound.io/example-name: work-load-identity
   name: work-load-identity
