--- a/package/crds/containeraws.gcp.upbound.io_nodepools.yaml
+++ b/package/crds/containeraws.gcp.upbound.io_nodepools.yaml
@@ -354,8 +354,6 @@ spec:
                       1.19.10-gke.1000). You can list all supported versions on a
                       given Google Cloud region by calling GetAwsServerConfig.
                     type: string
-                required:
-                - location
                 type: object
               initProvider:
                 description: |-
@@ -549,6 +547,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                  location:
+                    description: The location for the resource
+                    type: string
                   maxPodsConstraint:
                     description: The constraint on the maximum number of pods that
                       can be run simultaneously on a node in the node pool.
@@ -748,6 +749,10 @@ spec:
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.config)
                 || (has(self.initProvider) && has(self.initProvider.config))'
+            - message: spec.forProvider.location is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.location)
+                || (has(self.initProvider) && has(self.initProvider.location))'
             - message: spec.forProvider.maxPodsConstraint is a required parameter
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.maxPodsConstraint)
