--- a/examples/bigquery/connection.yaml
+++ b/examples/bigquery/connection.yaml
@@ -3,9 +3,10 @@ kind: Connection
 metadata:
   annotations:
     meta.upbound.io/example-id: bigquery/v1beta1/connection
+    uptest.upbound.io/timeout: "3600"
   labels:
     testing.upbound.io/example-name: connection
-  name: connection
+  name: connection-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     location: US
@@ -17,13 +18,13 @@ spec:
           namespace: upbound-system
         usernameSelector:
           matchLabels:
-            testing.upbound.io/example-name: user
+            testing.upbound.io/example-name: user-con
       databaseSelector:
         matchLabels:
-          testing.upbound.io/example-name: db
+          testing.upbound.io/example-name: db-con
       instanceIdSelector:
         matchLabels:
-          testing.upbound.io/example-name: instance
+          testing.upbound.io/example-name: instance-con
       type: POSTGRES
     description: a riveting description
     friendlyName: "\U0001F44B"
@@ -36,13 +37,13 @@ metadata:
   annotations:
     meta.upbound.io/example-id: bigquery/v1beta1/connection
   labels:
-    testing.upbound.io/example-name: db
-  name: db
+    testing.upbound.io/example-name: db-con
+  name: db-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     instanceSelector:
       matchLabels:
-        testing.upbound.io/example-name: instance
+        testing.upbound.io/example-name: instance-con
 
 ---
 
@@ -53,7 +54,7 @@ metadata:
     uptest.upbound.io/pre-delete-hook: testhooks/delete-user.sh
     meta.upbound.io/example-id: bigquery/v1beta1/connection
   labels:
-    testing.upbound.io/example-name: instance
+    testing.upbound.io/example-name: instance-con
   name: example-instance-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
@@ -71,13 +72,13 @@ metadata:
   annotations:
     meta.upbound.io/example-id: bigquery/v1beta1/connection
   labels:
-    testing.upbound.io/example-name: user
-  name: user
+    testing.upbound.io/example-name: user-con
+  name: user-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
     instanceSelector:
       matchLabels:
-        testing.upbound.io/example-name: instance
+        testing.upbound.io/example-name: instance-con
     passwordSecretRef:
       key: attribute.password
       name: example-password
