Remove deleted field 'size' and add 'initialSize' for NodeGroup.compute
Signed-off-by: Fatih Türken <turkenf@gmail.com>

--- a/examples/compute/nodegroup.yaml
+++ b/examples/compute/nodegroup.yaml
@@ -13,7 +13,7 @@ spec:
     nodeTemplateSelector:
       matchLabels:
         testing.upbound.io/example-name: node-group
-    size: 1
+    initialSize: 1
     zone: us-central1-a
 
 ---
