Fix update loop for Job.dataflow
Co-authored-by: Sergen Yalçın <yalcinsergen97@gmail.com>
Signed-off-by: Fatih Türken <turkenf@gmail.com>

--- a/examples/dataflow/job.yaml
+++ b/examples/dataflow/job.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   forProvider:
     name: dataflow-job
+    skipWaitOnJobTermination: true
     region: us-central1
     parameters:
       inputFile: gs://my-bucket/file.txt
